syntax = "proto3";

option csharp_namespace = "Payment.gRPC";

package test;

// The greeting service definition.
service Tester {
  // Sends a greeting
  rpc SayHello (TestRequest) returns (TestReply);
}

// The request message containing the user's name.
message TestRequest {
  string name = 1;
}

// The response message containing the greetings.
message TestReply {
  string message = 1;
}
